2017-02-22 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use a list (GtkTreeView), with action buttons and referenceable history items, instead of plain text (GtkTextView) for history

2017-02-20 Hanna Knutsson <hanna_k@fmgirl.com>

	* Add copy register button and modify the behaviour of the swap button
	* Add buttons for arithmetics next to the RPN stack

2017-02-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* Add swap button, use up/down buttons for rotation if no selection and remove top of the stack with delete button if no selection
	* Combine RPN mode and syntax in single menu and with combined choices

2016-12-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Replace deprecated gtk_menu_popup with gtk_menu_popup_at_pointer for gtk >= 3.22
	* Add option to use multiple instances by default

2016-10-24 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix STO button tooltip
	* Do not use gdk_cairo_create with gdk >= 3.22

2016-09-12 Hanna Knutsson <hanna_k@fmgirl.com>

	* Avoid overriding primary selection when receiving focus

2016-09-02 Hanna Knutsson <hanna_k@fmgirl.com>

	* Mixed units conversion

2016-09-01 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix "to base"

2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* Command line option start a new instance of the application

2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* Only run a single instance of the application

2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>

	* Show actual number of days since last exchange rates update

2016-06-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Improve exchange rates handling
	* Exchange rates update interval in preferences
	* If fetch exchange rates on startup is set, then update exchange rates every day instead

2016-06-01 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use html help instead

2016-05-28 Hanna Knutsson <hanna_k@fmgirl.com>

	* New "to" commands: factors and fraction

2016-05-27 Hanna Knutsson <hanna_k@fmgirl.com>

	* hex, oct, bin, bases, optimal, base "to" commands