@@ -1,3 +1,7 @@
+2017-02-23 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Calculate text in spinbox and convert integer arguments to non-decimal input bases in input function dialog
+
 2017-02-22 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Use a list (GtkTreeView), with action buttons and referenceable history items, instead of plain text (GtkTextView) for history
